# Timeline-comfyui-

./: IMPLEMENTATION_PLAN.md  PHASE2_4_COMPLETION_SUMMARY.md  PHASE3_COMPLETION_SUMMARY.md  PHASE8_COMPLETION_SUMMARY.md  PHASE_STATUS_REPORT.md  PROJECT_STATUS.md  ROADMAP_DETAILED.md  RUST_ARCHIVE_ANALYSIS.md
Gausian_native_editor-main/: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.cross  LICENSE  MARKETPLACE_INTEGRATION_GUIDE.md  PERFORMANCE_GUIDE.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_UI_INTEGRATION_GUIDE.md  PHASE7_COLLABORATIVE_EDITING.md  PHASE_STATUS_REPORT.md  README.md  confirm_event.py  default_image_storyboard.json
Gausian_native_editor-main/apps/collab-server/: Cargo.toml
Gausian_native_editor-main/apps/collab-server/src/: main.rs  session.rs  ws.rs
Gausian_native_editor-main/apps/comfywebview/: Cargo.toml
Gausian_native_editor-main/apps/comfywebview/src/: main.rs
Gausian_native_editor-main/apps/desktop/: Cargo.toml  Dockerfile.cross  clippy.toml
Gausian_native_editor-main/apps/desktop/presets/: catalog.json
Gausian_native_editor-main/apps/desktop/resources/: Gausian.icns
Gausian_native_editor-main/apps/desktop/src/: app.rs  app_assets.rs  app_cloud.rs  app_modal.rs  app_project.rs  app_screenplay.rs  app_storyboard.rs  app_timeline.rs  app_ui.rs  app_update.rs  audio_decode.rs  audio_engine.rs  automation_ui.rs  clock.rs  collab_ui.rs  comfyui.rs  edit_modes.rs  graph_editor.rs  interaction.rs  keyboard.rs  lib.rs  main.rs  marker_ui.rs  marketplace_manager.rs  marketplace_ui.rs  media_info.rs  playback_selector.rs  plugin_details.rs  prompt_normalize.rs  proxy_pipeline.rs  proxy_policy.rs  proxy_queue.rs  selection.rs  timeline_toolbar.rs  timeline_ui_helpers.rs
Gausian_native_editor-main/apps/desktop/src/cache/: job.rs  manager.rs  mod.rs  pipeline.rs
Gausian_native_editor-main/apps/desktop/src/decode/: manager.rs  mod.rs  worker.rs
Gausian_native_editor-main/apps/desktop/src/embed_webview/: macos.rs  mod.rs
Gausian_native_editor-main/apps/desktop/src/export/: ffmpeg.rs  mod.rs  ui.rs
Gausian_native_editor-main/apps/desktop/src/gpu/: context.rs  mod.rs  readback.rs  sync.rs
Gausian_native_editor-main/apps/desktop/tests/: prompt_normalize_tests.rs
Gausian_native_editor-main/apps/marketplace-server/: Cargo.toml  schema.sql
Gausian_native_editor-main/apps/marketplace-server/src/: api.rs  main.rs  models.rs  storage.rs
Gausian_native_editor-main/crates/ai-pipeline/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  PROJECT_STRUCTURE.md  README.md
Gausian_native_editor-main/crates/ai-pipeline/examples/: basic_training.rs  configuration_presets.rs  dataset_management.rs
Gausian_native_editor-main/crates/ai-pipeline/src/: captioning.rs  dataset.rs  lib.rs  lora_config.rs  training.rs
Gausian_native_editor-main/crates/cli/: Cargo.toml
Gausian_native_editor-main/crates/cli/src/: main.rs
Gausian_native_editor-main/crates/collaboration/: Cargo.toml
Gausian_native_editor-main/crates/collaboration/src/: conflict.rs  crdt.rs  lib.rs  offline.rs  operations.rs  presence.rs  sync.rs
Gausian_native_editor-main/crates/collaboration/tests/: integration_tests.rs
Gausian_native_editor-main/crates/color/: Cargo.toml
Gausian_native_editor-main/crates/color/src/: color_spaces.rs  lib.rs  lut3d.rs  scopes.rs
Gausian_native_editor-main/crates/effects/: Cargo.toml
Gausian_native_editor-main/crates/effects/src/: blend_modes.rs  blur.rs  brightness_contrast.rs  chroma_key.rs  chromatic_aberration.rs  color_wheels.rs  corner_pin.rs  crop.rs  curves.rs  exposure_gamma.rs  film_grain.rs  lib.rs  lut_effect.rs  saturation_hue.rs  sharpen.rs  transform.rs  vignette.rs
Gausian_native_editor-main/crates/exporters/: Cargo.toml
Gausian_native_editor-main/crates/exporters/src/: edl.rs  fcp7xml.rs  fcpxml.rs  lib.rs
Gausian_native_editor-main/crates/jobs/: Cargo.toml
Gausian_native_editor-main/crates/jobs/src/: lib.rs
Gausian_native_editor-main/crates/media-io/: Cargo.toml
Gausian_native_editor-main/crates/media-io/src/: yuv_decode.rs
Gausian_native_editor-main/crates/native-decoder/: Cargo.toml
Gausian_native_editor-main/crates/native-decoder/examples/: test_videotoolbox.rs
Gausian_native_editor-main/crates/native-decoder/src/: avfoundation_shim.h  avfoundation_shim.m  gstreamer_backend.rs  lib.rs  macos.rs
Gausian_native_editor-main/crates/plugin-host/: Cargo.toml
Gausian_native_editor-main/crates/plugin-host/src/: lib.rs  marketplace.rs  python_bridge.rs  signatures.rs  wasm_runtime.rs
Gausian_native_editor-main/crates/project/: Cargo.toml
Gausian_native_editor-main/crates/project/migrations/: V0001__init.sql  V0002__jobs.sql  V0003__timeline.sql  V0004__transcripts.sql  V0005__asset_metadata.sql  V0006__proxy_jobs.sql
Gausian_native_editor-main/crates/renderer/: Cargo.toml
Gausian_native_editor-main/crates/renderer/src/: lib.rs
Gausian_native_editor-main/crates/timeline/: Cargo.toml
Gausian_native_editor-main/crates/timeline/src/: automation.rs  commands.rs  edit_operations.rs  graph.rs  lib.rs  markers.rs  timecode.rs
Gausian_native_editor-main/crates/transitions/: Cargo.toml
Gausian_native_editor-main/crates/transitions/src/: dissolve.rs  lib.rs  slide.rs  spin.rs  wipe.rs  zoom.rs
Gausian_native_editor-main/examples/plugins/audio-processor-python/: audio_normalizer.py  plugin.json
Gausian_native_editor-main/examples/plugins/blur-effect-python/: blur_effect.py  plugin.json  requirements.txt
Gausian_native_editor-main/examples/plugins/color-grading-python/: color_grading.py  plugin.json
Gausian_native_editor-main/examples/plugins/simple-effect-wasm/: Cargo.toml  README.md  plugin.json
Gausian_native_editor-main/examples/plugins/text-generator-python/: plugin.json  text_generator.py
Gausian_native_editor-main/formats/: plot_types.json  screenplay_format.json  screenplay_requirements.json  storyboard_format.json
Gausian_native_editor-main/lora_training/: config.json
Gausian_native_editor-main/relay/: Dockerfile  README.md  main.py
(+46 files in other folders)
