[package]
name = "collab-server"
version = "0.1.0"
edition = "2021"

[dependencies]
collaboration = { path = "../../crates/collaboration" }
timeline = { path = "../../crates/timeline" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# WebSocket
tungstenite = "0.21"
futures-util = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "collab-server"
path = "src/main.rs"
