[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
pollster = "0.4"
winit = { version = "0.30" }
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["wgpu"] }
egui_extras = { version = "0.29", features = ["default"] }
egui_plot = "0.29"
rfd = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25"
crossbeam-channel = "0.5"
crossbeam = "0.8"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
project = { path = "../../crates/project" }
timeline = { path = "../../crates/timeline" }
renderer = { path = "../../crates/renderer" }
exporters = { path = "../../crates/exporters" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
media-io = { path = "../../crates/media-io" }
pathdiff = "0.2"
jobs = { path = "../../crates/jobs" }
native-decoder = { path = "../../crates/native-decoder", features = ["gstreamer"] }
plugin-host = { path = "../../crates/plugin-host" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = "0.1"
symphonia = { version = "0.5", features = ["aac", "flac", "vorbis", "mp3", "wav"] }
gstreamer = "0.22"
gstreamer-app = "0.22"
gstreamer-audio = "0.22"
gstreamer-video = "0.22"
webbrowser = "0.8"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ureq = { version = "2" }
# Enable TLS for wss:// connections to Modal
# rustls with system roots keeps build portable without OpenSSL
# Enable client handshake + TLS + Url support for wss:// connections
tungstenite = { version = "0.21", default-features = false, features = ["handshake", "url", "rustls-tls-native-roots"] }
url = "2"
urlencoding = "2"
http = "1"
gstreamer-pbutils = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
num_cpus = "1.16"
once_cell = "1.19"
thiserror = "1"
glib = "0.19"
parking_lot = "0.12"
sha1 = "0.10"

[features]
unsafe-interop = []
embed-webview = ["cocoa", "objc"]
readback-test = []

# If you use cpal or rodio, make them mac-first via target sections.
# It's OK if only one of these appears in your repo; keep both sections—Cargo ignores unused ones.

[target.'cfg(target_os = "macos")'.dependencies]
# Use CoreAudio on macOS (cpal selects correct backend automatically)
cpal = { version = "0.15" }
rodio = { version = "0.17" }
# For embedded WKWebView (feature-gated)
cocoa = { version = "0.25", optional = true }
objc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
# Keep ALSA available on Linux (cpal selects correct backend automatically)
cpal = { version = "0.15" }
rodio = { version = "0.17" }

[package.metadata.bundle]
name = "Gausian Native Editor"
identifier = "com.gausian.desktop"
copyright = "Copyright © 2024 Gausian"
category = "Video"
short_description = "Native video editor with real-time GPU preview and cloud rendering hooks."
long_description = "Gausian is a fast, native video editor written in Rust with an egui interface, GPU preview, FFmpeg integration, and optional Modal/ComfyUI cloud workflows."
resources = []
icon = ["resources/Gausian.icns", "resources/logo.png"]

[package.metadata.bundle.macOS]
minimum_system_version = "10.15"

[package.metadata.bundle.windows]
publisher = "Gausian"

[package.metadata.bundle.linux]
deb = { priority = "optional", depends = ["libgtk-3-0", "libgstreamer1.0-0", "libgstreamer-plugins-base1.0-0"] }
