[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gausian-cli"
path = "src/main.rs"

[dependencies]
timeline = { path = "../timeline" }
project = { path = "../project" }
media-io = { path = "../media-io" }
exporters = { path = "../exporters" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
