[package]
name = "collaboration"
version = "0.1.0"
edition = "2021"

[dependencies]
# CRDT implementation - using automerge for timeline collaboration
automerge = "0.5"

# Async runtime and WebSocket support
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# UUID for user and session IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"

# Timeline dependency
timeline = { path = "../timeline" }

# Error handling
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
