[package]
name = "color"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7"           # Parser combinators for LUT files
wgpu = "22"
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"      # Math for color matrices
bytemuck = { version = "1", features = ["derive"] }

[features]
default = []
scopes = []  # Video scopes feature (optional, requires egui_plot)
