[package]
name = "effects"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glam = "0.27"  # Math for transforms

# For curves
lyon = "1.0"

[features]
default = []
