[package]
name = "exporters"
version = "0.1.0"
edition = "2021"

[dependencies]
timeline = { path = "../timeline" }
project = { path = "../project" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
walkdir = "2"

[features]
default = []
