[package]
name = "native-decoder"
version = "0.1.0"
edition = "2021"

[features]
# Enable a GStreamer-backed decoder implementation.
gstreamer = [
  "dep:gstreamer",
  "dep:gstreamer-video",
  "dep:gstreamer-app",
  "dep:gstreamer-pbutils",
]

[target.'cfg(target_os = "macos")'.dependencies]
# Core Foundation and VideoToolbox bindings
core-foundation = "0.9"
core-video = "0.2"
core-media = "0.5"
av-foundation = "0.5"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
io-surface = "0.15"


# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# Fallback dependencies for non-macOS platforms
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

[dependencies]
# Common dependencies (align with eframe's wgpu)
wgpu = "22.1"
tracing-subscriber = "0.3"

[build-dependencies]
cc = "1.0"

# Optional GStreamer stack
[dependencies.gstreamer]
version = "0.22"
optional = true

[dependencies.gstreamer-video]
version = "0.22"
optional = true

[dependencies.gstreamer-app]
version = "0.22"
optional = true

[dependencies.gstreamer-pbutils]
version = "0.22"
optional = true

[[example]]
name = "test_videotoolbox"
path = "examples/test_videotoolbox.rs"
