[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
pollster = "0.4"
tracing = "0.1"

[features]
default = []
unsafe-interop = []
